--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="app_name" translatable="false">AdvancedControls 2.0</string>
 
     <string name="screen_gestures_panel_title">AdvancedControls 2.0</string>
-    <string name="screen_gestures_panel_summary">USB Fast charge, Spectrum, Vibration, Flashlight, KCAL</string>
+    <string name="screen_gestures_panel_summary">USB Fast charge, Vibration, Flashlight, KCAL</string>
     <string name="category_vibrator">Vibrator</string>
     <string name="vib_strength_title_head">Strength</string>
     <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
@@ -54,9 +54,4 @@
     <string name="menu_reset">Reset</string>
     <string name="kcal_color_temp">Color temperature (K)</string>
 
-    <!-- Spectrum Profiles -->
-    <string name="spectrum_category_title" translatable="false">Spectrum</string>
-    <string name="spectrum_title">Kernel Power Profile</string>
-    <string name="spectrum_summary" translatable="false">%1$s</string>
-    <string name="spectrum_switch">Disable kernel profiles</string>
 </resources>
