--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,58 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2013-2014 The CyanogenMod Project
-
+<!-- Copyright (C) 2018 The Xiaomi-SDM660 Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
+	 
+	 Translated with <3 by pqhaz
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" translatable="false">AdvancedControls 2.0</string>
+<resources>
+    <!-- App name and summary -->
+    <string name="advanced_settings">AdvancedControls 2</string>
+    <string name="advanced_settings_summary">Настройки устройства</string>
 
-    <string name="screen_gestures_panel_title">AdvancedControls 2.0</string>
-    <string name="screen_gestures_panel_summary">USB Быстрая зарядка, Spectrum, Вибрация, Вспышка, KCAL</string>
-    <string name="category_vibrator">Вибрация</string>
-    <string name="vib_strength_title_head">Сила</string>
-    <string name="vib_strength_summary_head">Установить силу вибрации</string>
-    <string name="category_torch">Фонарик</string>
-    <string name="yellow_torch_brightness_title_head">Максимальная яркость желтого светодиода</string>
-    <string name="yellow_torch_brightness_summary_head">Установить максимальную яркость желтого светодиода</string>
-    <string name="white_torch_brightness_title_head">Максимальная яркость белого светодиода</string>
-    <string name="white_torch_brightness_summary_head">Установить максимальную яркость белого светодиода</string>
+    <!-- Buttons -->
+    <string name="buttons_title">Кнопки</string>
+    <string name="swapbuttons_title">Поменять кнопки местами</string>
+    <string name="swapbuttons_summary">Меняетместами кнопки Недавних и Назад</string>
 
-    <!-- Battery -->
-    <string name="fast_charge_title">USB Быстрая зарядка</string>
-    <string name="fast_charge_summary">Включить/отключить USB принудительно быструю зарядку</string>
+	<!-- Fingerprint options -->
+    <string name="fp_title">Настройки сканера отпечатков</string>
+    <string name="fp_wakeup_title">Сканер будит устройство</string>
+    <string name="fp_wakeup_summary">Пробуждать устройство сканером когда дисплей выключен</string>
+    <string name="fp_home_title">Сканер отпечатков как кнопка</string>
+    <string name="fp_home_summary">Сканер отпечатков работает как кнопка Домой</string>
+	<string name="fp_pocketmode_title">Сканер отпечатков в кармане</string>
+	<string name="fp_pocketmode_summary">Отключить сканер отпечатков в кармане</string>
 
-    <string name="toast_restart">Перезагрузить устройство для применения изменений</string>
+    <!-- Gestures -->
+    <string name="gestures_title">Жесты</string>
+    <string name="dt2w_title">Пробуждать двойным касанием</string>
+    <string name="dt2w_summary">Пробуждать устройство двойным касание по экрану</string>
+
+    <!-- USB Fastcharge -->
+    <string name="usb_fastcharge_title">USB Быстрая зарядка</string>
+    <string name="fastcharge_title">Включить USB Быструю зарядку</string>
+    <string name="fastcharge_summary">Использовать быструю зарядку при аодключении к USB</string>
+
+	<!-- Torch -->
+    <string name="torch_title">Светодиод</string>
+    <string name="yellow_torch_brightness_title_head">Желтый</string>
+    <string name="white_torch_brightness_title_head">Белый</string>
 
     <!-- Display -->
-    <string name="graphics_title">Дисплей</string>
+    <string name="display_title">Дисплей</string>
 
-    <!-- Kcal -->
-    <string name="kcal_title">Цветовая гамма экрана</string>
-    <string name="kcal_summary">Калибровка цветовой гаммы экрана через KCAL</string>
-    <string name="kcal_enabled_title">Включить KCAL</string>
-    <string name="kcal_enabled_summary">Включить калибровку дисплея через KCAL</string>
-    <string name="kcal_red">Красный</string>
-    <string name="kcal_green">Зеленый</string>
-    <string name="kcal_blue">Синий</string>
-    <string name="kcal_saturation">Насыщенность</string>
-    <string name="kcal_contrast">Контрастность</string>
-    <string name="menu_reset">Сброс</string>
-    <string name="kcal_color_temp">Цветовая температура (K)</string>
+    <!-- KCal -->
+    <string name="device_kcal_title">Цвет дисплея</string>
+    <string name="device_kcal_suammary">Калибровка дисплея используя KCAL</string>
+
+    <string name="vibration_title">Вибрация</string>
+    <string name="vibration_strength_title">Сила</string>
 
     <!-- Spectrum Profiles -->
-    <string name="spectrum_category_title" translatable="false">Spectrum</string>
-    <string name="spectrum_title">Профили Spectrum</string>
-    <string name="spectrum_summary" translatable="false">%1$s</string>
-    <string name="spectrum_switch">Отключить профили Spectrum</string>
+    <string name="spectrum_profile_title">Производительность</string>
+    <string name="spectrum_title">Настройки</string>
+    <string name="spectrum_summary">Выбрать настройки</string>
+    <string name="spectrum_dialogTitle">Выбрать настройки</string>
+
+    <!-- Values for Spectrum Presets -->
+    <string name="spectrum_performance">Производительность</string>
+    <string name="spectrum_battery">Энергосбережение</string>
+    <string name="spectrum_gaming">Гейминг</string>
+    <string name="spectrum_balance">Баланс</string>
+    <string name="spectrum_extreme_battery">Сильное Энергосбережение</string>
+
+    <!-- kcal -->
+    <string name="advanced_settings_kcal">Калибровка цвета дисплея</string>
+    <string name="cat_colormanagement">Настройка цвета</string>
+    <string name="cat_calibration">Калибровка дисплея</string>
+
+    <string name="kcal_enabled">On</string>
+    <string name="kcal_disabled">Off</string>
+    <string name="set_on_boot">Включить при загрузке</string>
+    <string name="color_red">Красный</string>
+    <string name="color_green">Зеленый</string>
+    <string name="color_blue">Синий</string>
+    <string name="color_minimum">Минимальный</string>
+    <string name="saturation">Насыщенность</string>
+    <string name="value">Значение</string>
+    <string name="contrast">Контраст</string>
+    <string name="hue">Оттенок</string>
+    <string name="grayscale">Безцветный дисплей</string>
+    <string name="presets_dialog_title">Выбрать профиль</string>
+
+    <!-- Presets -->
+    <string name="preset_default">Default</string>
+    <string name="preset_version_1">Version 1</string>
+    <string name="preset_version_2">Version 2</string>
+    <string name="preset_version_3">Version 3</string>
+    <string name="preset_triluminous">Triluminous</string>
+    <string name="preset_deep_black_white">Deep Black and White</string>
+    <string name="preset_deep_natural">Deep Natural</string>
+    <string name="preset_cool_amoled">Cool Amoled</string>
+    <string name="preset_extreme_amoled">Extreme Amoled</string>
+    <string name="preset_warm_amoled">Warm Amoled</string>
+    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
+    <string name="preset_hide_ge1">Hide Ghosting Effect 1</string>
+    <string name="preset_hide_ge2">Hide Ghosting Effect 2</string>
+
+    <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
+    <string name="kcal_reset">Сброс</string>
+
+    <!-- CustomSeekBarPreference -->
+    <string name="edit_value">Выбрать новое значение</string>
+    <string name="default_value">Стандартное значение</string>
+    <string name="edit_hint">Значение между %1$d и %2$d</string>
 </resources>
