--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2013-2014 The CyanogenMod Project
+<!-- Copyright (C) 2018 The Xiaomi-SDM660 Project
+     Copyright (C) 2019-2020 mhkjahromi <m.h.k.jahromi@gmail.com>
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,44 +14,103 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" translatable="false">AdvancedControls 2.0</string>
+<resources>
+    <!-- App name and summary -->
+    <string name="advanced_settings">AdvancedControls 2</string>
+    <string name="advanced_settings_summary">Device specific features</string>
 
-    <string name="screen_gestures_panel_title">AdvancedControls 2.0</string>
-    <string name="screen_gestures_panel_summary">USB Fast charge, Vibration, Flashlight, KCAL</string>
-    <string name="category_vibrator">Vibrator</string>
-    <string name="vib_strength_title_head">Strength</string>
-    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
-    <string name="category_torch">Torch</string>
-    <string name="yellow_torch_brightness_title_head">Yellow led maximum brightness</string>
-    <string name="yellow_torch_brightness_summary_head">Define the maximum brightness of the yellow led</string>
-    <string name="white_torch_brightness_title_head">White led maximum brightness</string>
-    <string name="white_torch_brightness_summary_head">Define the maximum brightness of the white led</string>
-    <string name="plus_one">+1</string>
-    <string name="minus_one">-1</string>
-    <string name="restore_default">Default</string>
-    <string name="USB_summary">USB</string>
+    <!-- Buttons -->
+    <string name="buttons_title">Buttons</string>
+    <string name="swapbuttons_title">Swap buttons</string>
+    <string name="swapbuttons_summary">Swap the order of recents and back buttons</string>
 
-    <!-- Battery -->
-    <string name="fast_charge_title">USB Fast charge</string>
-    <string name="fast_charge_summary">Enable/disable USB force fast charging</string>
+	<!-- Fingerprint options -->
+    <string name="fp_title">Fingerprint options</string>
+    <string name="fp_wakeup_title">Fingerprint wakes device</string>
+    <string name="fp_wakeup_summary">Allow fingerprint to wake the device while screen is off</string>
+    <string name="fp_home_title">Fingerprint as button</string>
+    <string name="fp_home_summary">Use fingerprint reader as a customizable button</string>
+	<string name="fp_pocketmode_title">Fingerprint pocketmode</string>
+	<string name="fp_pocketmode_summary">Turn off fingerprint when your device is in the pocket</string>
 
-    <string name="toast_restart">Restart phone to apply changes</string>
+    <!-- Gestures -->
+    <string name="gestures_title">Gestures</string>
+    <string name="dt2w_title">Double Tap to wake</string>
+    <string name="dt2w_summary">Double tap on screen wake device</string>
+
+    <!-- USB Fastcharge -->
+    <string name="usb_fastcharge_title">USB Fastcharge</string>
+    <string name="fastcharge_title">Enable USB Fastcharge</string>
+    <string name="fastcharge_summary">Use fastcharge when connected to a computer via usb port</string>
+
+	<!-- Torch -->
+    <string name="torch_title">Torch</string>
+    <string name="yellow_torch_brightness_title_head">Yellow</string>
+    <string name="white_torch_brightness_title_head">White</string>
 
     <!-- Display -->
-    <string name="graphics_title">Display</string>
+    <string name="display_title">Display</string>
 
-    <!-- Kcal -->
-    <string name="kcal_title">Display color</string>
-    <string name="kcal_summary">Display color calibration using KCAL</string>
-    <string name="kcal_enabled_title">Enable KCAL</string>
-    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
-    <string name="kcal_red">Red</string>
-    <string name="kcal_green">Green</string>
-    <string name="kcal_blue">Blue</string>
-    <string name="kcal_saturation">Saturation</string>
-    <string name="kcal_contrast">Contrast</string>
-    <string name="menu_reset">Reset</string>
-    <string name="kcal_color_temp">Color temperature (K)</string>
+    <!-- KCal -->
+    <string name="device_kcal_title">Display Color</string>
+    <string name="device_kcal_suammary">Display color calibration using KCAL</string>
 
+    <string name="vibration_title">Haptic feedback</string>
+    <string name="vibration_strength_title">Strength</string>
+
+    <!-- Spectrum Profiles -->
+    <string name="spectrum_profile_title">Performance</string>
+    <string name="spectrum_title">Performance Settings</string>
+    <string name="spectrum_summary">Choose your Performance settings</string>
+    <string name="spectrum_dialogTitle">Choose your Performance settings</string>
+
+    <!-- Values for Spectrum Presets -->
+    <string name="spectrum_performance">Performance</string>
+    <string name="spectrum_battery">Battery</string>
+    <string name="spectrum_gaming">Gaming</string>
+    <string name="spectrum_balance">Balance</string>
+    <string name="spectrum_extreme_battery">Extreme Battery</string>
+
+    <!-- kcal -->
+    <string name="advanced_settings_kcal">Display Color Calibration</string>
+    <string name="cat_colormanagement">Color Settings</string>
+    <string name="cat_calibration">Display Calibration</string>
+
+    <string name="kcal_enabled">On</string>
+    <string name="kcal_disabled">Off</string>
+    <string name="set_on_boot">Set On Boot</string>
+    <string name="color_red">Red</string>
+    <string name="color_green">Green</string>
+    <string name="color_blue">Blue</string>
+    <string name="color_minimum">Minimum</string>
+    <string name="saturation">Saturation</string>
+    <string name="value">Value</string>
+    <string name="contrast">Contrast</string>
+    <string name="hue">Hue</string>
+    <string name="grayscale">Grayscale Display</string>
+    <string name="presets_dialog_title">Select Preset</string>
+
+    <!-- Presets -->
+    <string name="preset_default">Default</string>
+    <string name="preset_version_1">Version 1</string>
+    <string name="preset_version_2">Version 2</string>
+    <string name="preset_version_3">Version 3</string>
+    <string name="preset_triluminous">Triluminous</string>
+    <string name="preset_deep_black_white">Deep Black and White</string>
+    <string name="preset_deep_natural">Deep Natural</string>
+    <string name="preset_cool_amoled">Cool Amoled</string>
+    <string name="preset_extreme_amoled">Extreme Amoled</string>
+    <string name="preset_warm_amoled">Warm Amoled</string>
+    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
+    <string name="preset_hide_ge1">Hide Ghosting Effect 1</string>
+    <string name="preset_hide_ge2">Hide Ghosting Effect 2</string>
+
+    <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
+    <string name="kcal_reset">Reset</string>
+
+    <!-- CustomSeekBarPreference -->
+    <string name="edit_value">Choose new Value</string>
+    <string name="default_value">Default Value</string>
+    <string name="edit_hint">Value between %1$d and %2$d</string>
 </resources>
