--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -37,9 +37,10 @@
     <string name="dt2w_summary">Пробуждать устройство двойным касание по экрану</string>
 
     <!-- USB Fastcharge -->
-    <string name="usb_fastcharge_title">USB Быстрая зарядка</string>
+    <string name="usb_fastcharge_title">Питание</string>
     <string name="fastcharge_title">Включить USB Быструю зарядку</string>
     <string name="fastcharge_summary">Использовать быструю зарядку при аодключении к USB</string>
+    <string name="qc_limit_summary">Установить лимит зарядки в mA</string>
 
     <!-- Audio amplification -->
     <string name="headphone_gain">Усиление наушников</string>
