--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -120,6 +120,16 @@
     <string name="spectrum_balance">Баланс</string>
     <string name="spectrum_extreme_battery">Сильное Энергосбережение</string>
 
+        <!-- Navbar Profiles -->
+    <string name="navbar_profile_title">Навигация</string>
+    <string name="navbar_title">Панель навигации</string>
+    <string name="navbar_summary">Настройка панели навигации</string>
+    <string name="navbar_dialogTitle">Включить или выключить (нужна перезагрузка)</string>
+
+    <!-- Values for Navbar -->
+    <string name="navbar_enabled">Включить</string>
+    <string name="navbar_disabled">Отключить</string>
+
     <!-- kcal -->
     <string name="advanced_settings_kcal">Калибровка цвета дисплея</string>
     <string name="cat_colormanagement">Настройка цвета</string>
